adding one more pera i html file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 class="h1">Hello World!!!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus perspiciatis suscipit porro, praesentium asperiores eos quaerat aliquid excepturi! Officiis sunt commodi, vel distinctio eos non accusantium earum aspernatur autem deleniti!</p>
 </body>
 </html>
